    - Add a section about Marvell's Kirkwood, which is now supported.
  * Updates for MIPS:
    - Show some sections on mipsel that apply there too.
    - Say that the Cobalt Qube 2700 (Qube1) is no longer supported.

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Document partman/mount_style, which controls how filesystems are
      mounted.
  * Document pkgsel/include/install-recommends.

 -- Frans Pop <fjp@debian.org>  Tue, 28 Apr 2009 18:13:46 +0200

installation-guide (20090427) unstable; urgency=low

  [ Colin Watson ]
  * Document partman/early_command (added in partman-base 129).
  * Add note about preseeding ownership to preseed-seenflag section, since I
    had a user confused by this who hadn't found the note elsewhere
    explaining owners.
  * Use /dev/sda and /dev/sdb in the RAID preseeding example rather than
    /dev/discs/disc0/disc and /dev/discs/disc1/disc, since the latter
    devices no longer exist.
  * Document noshell boot parameter. See #504381.
  * Clarify behaviour of "auto" preseed alias.
  * Clarify that preseeding aliases are only aliases for question names, and
    that a value is always needed as well.
  * Apparently you can pass extra boot parameters to OpenBoot at the end of
    the 'boot' command. Document this as it has been known to cause some
    confusion.

  [ Frans Pop ]
  * Document preseeding of network-console now that its postinst can be
    relied on to be executed.
  * Update info on passing boot parameter for PPPoE.
  * Explain Standard system task.
  * Add LXDE desktop environment.
  * Mention option to select desktop environment from boot menu for x86 CDs.
  * Add task sizes for alternative desktop environments.
  * chroot install: 'tzconfig' is deprecated for 'dpkg-reconfigure tzdata'.
    Closes: #520582.
  * Booting using LILO or GRUB: minor improvements. Closes: #519508.
  * Fix example how to generate md5-encoded password. Closes: #518018.
  * Fix missing tags in Japanese translation. Closes: #509372.