@@ -107,6 +107,16 @@ want a really minimal system.
 
 </para><para>
 
+If during language selection a default locale other than the <quote>C</quote>
+locale was selected, <command>tasksel</command> will check if any
+localization tasks are defined for that locale and will automatically try
+to install relevant localization packages. This includes for example
+packages containing word lists or special fonts for your language.
+If a desktop environment was selected, it will also install appropriate
+localization packages for that (if available).
+
+</para><para>
+
 Once you've selected your tasks, select &BTN-CONT;. At this point,
 <command>aptitude</command> will install the packages that are part
 of the selected tasks. If a particular program needs more information
