@@ -25,7 +25,10 @@ installation-guide (2009xxxx) UNRELEASED; urgency=low
       mounted.
   * Document pkgsel/include/install-recommends.
 
- -- Frans Pop <fjp@debian.org>  Tue, 28 Apr 2009 18:13:46 +0200
+  [ Frans Pop ]
+  * Document installation of localization tasks.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 21 May 2009 13:11:16 +0200
 
 installation-guide (20090427) unstable; urgency=low
 
